# grpc-test

./: .gitignore  BUILD  README.md  WORKSPACE  go.mod  repositories.bzl
.github/WORKFLOWS/: ci.yaml
.github/workflows/: ci.yaml
counter/client/: BUILD.bazel  main.go
counter/proto/: BUILD.bazel  counter.proto
counter/server/: BUILD  counter_server.go  counter_server_test.go  main.go
