load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "grpctest_echo_proto",
    srcs = ["counter.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "grpctest_echo_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mikehelmick/grpc-test/counter/proto",
    proto = ":grpctest_echo_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":grpctest_echo_go_proto"],
    importpath = "github.com/mikehelmick/grpc-test/counter/proto",
    visibility = ["//visibility:public"],
)
